[mod] mysql 临时表

--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -35,6 +35,19 @@
 SELECT * FROM performance_schema.processlist;
 
 
+3. Multi-Range Read 优化
+explain 结果中，如果看到 Extra 字段多了 Using MRR，表示的是用上了 MRR 优化。
+
+MRR 多范围查询，即：在从二级索引遍历数据获得主键id回表查询完整数据时，先将获取到的主键id放入一个read_rnd_buffer_size中，排序，然后顺序去主键树上获取完整数据，并返回结果。 如果read_rnd_buffer 不够，则会放满后便去主键树查询，然后返回结果，然后再去二级索引上获取主键id。 在执行计划中，可以看到 using MRR 。
+
+这里，read_rnd_buffer 的大小是由 read_rnd_buffer_size 参数控制的。另外需要说明的是，如果你想要稳定地使用 MRR 优化的话，需要设置set optimizer_switch="mrr_cost_based=off"。（官方文档的说法，是现在的优化器策略，判断消耗的时候，会更倾向于不使用 MRR，把 mrr_cost_based 设置为 off，就是固定使用 MRR 了。）
+
+chatgpt的回答： MySQL 默认情况下不启用 MRR (Multi-Range Read) 优化是因为 MRR 优化在某些场景下可能会降低性能，且需要占用更多的内存。MRR 优化主要针对大量数据的分页查询操作进行优化，通过在扫描数据时，将多个相邻的行组成一个范围（Range），避免了单个行的重复扫描，从而提高了查询效率。但是，如果数据量较小或者查询模式不适合 MRR 优化，使用 MRR 可能会导致额外的开销，从而降低性能。 此外，MRR 优化也需要占用更多的系统内存，因为在使用 MRR 优化时，MySQL 会事先将多个行缓存在内存中，以避免重复扫描。如果缓存的数据量过大，可能会导致系统内存被耗尽，从而影响系统的稳定性和性能。 因此，在使用 MySQL 进行大量数据的分页查询时，可以考虑启用 MRR 优化，通过减少扫描次数来提高查询效率。但是，在一般的查询场景下，由于 MRR 优化可能会带来一些额外的开销，因此 MySQL 默认情况下不开启 MRR 优化。
+
+4. Bufffer Pool 的 LRU 算法
+由于 InnoDB 对 Bufffer Pool 的 LRU 算法做了优化，即：第一次从磁盘读入内存的数据页，会先放在 old 区域。如果 1 秒之后这个数据页不再被访问了，就不会被移动到 LRU 链表头部，这样对 Buffer Pool 的命中率影响就不大。
+
+
 ## # 执行过程
 
 #### client
@@ -3262,3 +3275,470 @@ InnoDB 管理 Buffer Pool 的 LRU 算法，是用链表来实现的。
 3. 再继续扫描后续的数据，之前的这个数据页之后也不会再被访问到，于是始终没有机会移到链表头部（也就是 young 区域），很快就会被淘汰出去。
 
 可以看到，这个策略最大的收益，就是在扫描这个大表的过程中，虽然也用到了 Buffer Pool，但是对 young 区域完全没有影响，从而保证了 Buffer Pool 响应正常业务的查询命中率。
+
+#### 如果客户端由于压力过大，迟迟不能接收数据，会对服务端造成什么严重的影响。
+这个问题的核心是，造成了“长事务”。
+至于长事务的影响，就要结合前面提到的锁、MVCC 的知识点了。
+1. 如果前面的语句有更新，意味着它们在占用着行锁，会导致别的语句更新被锁住；
+2. 当然读的事务也有问题，就是会导致 undo log 不能被回收，导致回滚段空间膨胀。
+
+
+## # 到底可不可以使用join？
+在实际生产中，关于 join 语句使用的问题，一般会集中在以下两类：
+1. 我们 DBA 不让使用 join，使用 join 有什么问题呢？
+2. 如果有两个大小不同的表做 join，应该用哪个表做驱动表呢？
+
+#### 测试表
+```sql
+
+CREATE TABLE `t2` (
+  `id` int(11) NOT NULL,
+  `a` int(11) DEFAULT NULL,
+  `b` int(11) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  KEY `a` (`a`)
+) ENGINE=InnoDB;
+
+drop procedure idata;
+delimiter ;;
+create procedure idata()
+begin
+  declare i int;
+  set i=1;
+  while(i<=1000)do
+    insert into t2 values(i, i, i);
+    set i=i+1;
+  end while;
+end;;
+delimiter ;
+call idata();
+
+create table t1 like t2;
+insert into t1 (select * from t2 where id<=100)
+
+```
+这两个表都有一个主键索引 id 和一个索引 a，字段 b 上无索引。存储过程 idata() 往表 t2 里插入了 1000 行数据，在表 t1 里插入的是 100 行数据。
+
+#### Index Nested-Loop Join
+看一下这个语句：
+```sql
+select * from t1 straight_join t2 on (t1.a=t2.a);
+```
+
+如果直接使用 join 语句，MySQL 优化器可能会选择表 t1 或 t2 作为驱动表，这样会影响我们分析 SQL 语句的执行过程。所以，为了便于分析执行过程中的性能问题，我改用 straight_join 让 MySQL 使用固定的连接方式执行查询，这样优化器只会按照我们指定的方式去 join。在这个语句里，t1 是驱动表，t2 是被驱动表。
+
+查看这条语句的 explain 结果，可以看到，在这条语句里，被驱动表 t2 的字段 a 上有索引，join 过程用上了这个索引，因此这个语句的执行流程是这样的：
+1. 从表 t1 中读入一行数据 R；
+2. 从数据行 R 中，取出 a 字段到表 t2 里去查找；
+3. 取出表 t2 中满足条件的行，跟 R 组成一行，作为结果集的一部分；
+4. 重复执行步骤 1 到 3，直到表 t1 的末尾循环结束。
+
+这个过程是先遍历表 t1，然后根据从表 t1 中取出的每行数据中的 a 值，去表 t2 中查找满足条件的记录。在形式上，这个过程就跟我们写程序时的嵌套查询类似，并且可以用上被驱动表的索引，所以我们称之为“Index Nested-Loop Join”，简称 NLJ。
+
+
+- 第一个问题：能不能使用 join?
+
+假设不使用 join，那就只能用单表查询。我们看看上面这条语句的需求，用单表查询怎么实现：
+1. 执行select * from t1，查出表 t1 的所有数据，这里有 100 行；
+2. 循环遍历这 100 行数据：
+   - 从每一行 R 取出字段 a 的值 $R.a；
+   - 执行select * from t2 where a=$R.a；
+   - 把返回的结果和 R 构成结果集的一行。
+
+可以看到，在这个查询过程，也是扫描了 200 行，但是总共执行了 101 条语句，比直接 join 多了 100 次交互。除此之外，客户端还要自己拼接 SQL 语句和结果。显然，这么做还不如直接 join 好。
+
+- 第二个问题：怎么选择驱动表？
+
+**在这个 join 语句执行过程中，驱动表是走全表扫描，而被驱动表是走树搜索。**
+
+假设被驱动表的行数是 M。每次在被驱动表查一行数据，要先搜索索引 a，再搜索主键索引。每次搜索一棵树近似复杂度是以 2 为底的 M 的对数，记为 log2M，所以在被驱动表上查一行的时间复杂度是 2*log2M。
+
+假设驱动表的行数是 N，执行过程就要扫描驱动表 N 行，然后对于每一行，到被驱动表上匹配一次。
+
+因此整个执行过程，近似复杂度是 N + N*2*log2M。显然，N 对扫描行数的影响更大，因此应该让小表来做驱动表。（如果没觉得这个影响有那么“显然”， 可以这么理解：N 扩大 1000 倍的话，扫描行数就会扩大 1000 倍；而 M 扩大 1000 倍，扫描行数扩大不到 10 倍。）
+
+到这里小结一下，通过上面的分析我们得到了两个结论：
+1. 使用 join 语句，性能比强行拆成多个单表执行 SQL 语句的性能要好；
+2. 如果使用 join 语句的话，需要让小表做驱动表。
+
+**但是，你需要注意，这个结论的前提是“可以使用被驱动表的索引”。**
+
+
+#### Simple Nested-Loop Join
+把 SQL 语句改成这样：
+```sql
+select * from t1 straight_join t2 on (t1.a=t2.b);
+```
+由于表 t2 的字段 b 上没有索引，因此再用上面的执行流程时，每次到 t2 去匹配的时候，就要做一次全表扫描。
+
+可以先设想一下这个问题，继续使用上面的算法，是不是可以得到正确的结果呢？如果只看结果的话，这个算法是正确的，而且这个算法也有一个名字，叫做“Simple Nested-Loop Join”。
+
+但是，这样算来，这个 SQL 请求就要扫描表 t2 多达 100 次，总共扫描 100*1000=10 万行。
+
+这还只是两个小表，如果 t1 和 t2 都是 10 万行的表（当然了，这也还是属于小表的范围），就要扫描 100 亿行，这个算法看上去太“笨重”了。
+
+当然，MySQL 也没有使用这个 Simple Nested-Loop Join 算法，而是使用了另一个叫作“Block Nested-Loop Join”的算法，简称 BNL。
+
+#### Block Nested-Loop Join
+这时候，被驱动表上没有可用的索引，算法的流程是这样的
+1. 把表 t1 的数据读入线程内存 join_buffer 中，由于我们这个语句中写的是 select *，因此是把整个表 t1 放入了内存；
+2. 扫描表 t2，把表 t2 中的每一行取出来，跟 join_buffer 中的数据做对比，满足 join 条件的，作为结果集的一部分返回。
+
+在这个过程中，对表 t1 和 t2 都做了一次全表扫描，因此总的扫描行数是 1100。由于 join_buffer 是以无序数组的方式组织的，因此对表 t2 中的每一行，都要做 100 次判断，总共需要在内存中做的判断次数是：100*1000=10 万次。
+
+如果使用 Simple Nested-Loop Join 算法进行查询，扫描行数也是 10 万行。因此，从时间复杂度上来说，这两个算法是一样的。但是，Block Nested-Loop Join 算法的这 10 万次判断是内存操作，速度上会快很多，性能也更好。
+
+来看一下，在这种情况下，应该选择哪个表做驱动表。
+
+假设小表的行数是 N，大表的行数是 M，那么在这个算法里：
+1. 两个表都做一次全表扫描，所以总的扫描行数是 M+N；
+2. 内存中的判断次数是 M*N。
+
+可以看到，调换这两个算式中的 M 和 N 没差别，因此这时候选择大表还是小表做驱动表，执行耗时是一样的。
+
+这个例子里表 t1 才 100 行，要是表 t1 是一个大表，join_buffer 放不下怎么办呢？
+
+join_buffer 的大小是由参数 join_buffer_size 设定的，默认值是 256k。如果放不下表 t1 的所有数据话，策略很简单，就是分段放。
+
+把 join_buffer_size 改成 1200，再执行，执行过程就变成了：
+1. 扫描表 t1，顺序读取数据行放入 join_buffer 中，放完第 88 行 join_buffer 满了，继续第 2 步；
+2. 扫描表 t2，把 t2 中的每一行取出来，跟 join_buffer 中的数据做对比，满足 join 条件的，作为结果集的一部分返回；
+3. 清空 join_buffer；
+4. 继续扫描表 t1，顺序读取最后的 12 行数据放入 join_buffer 中，继续执行第 2 步。
+
+这个流程才体现出了这个算法名字中“Block”的由来，表示“分块去 join”。
+
+可以看到，这时候由于表 t1 被分成了两次放入 join_buffer 中，导致表 t2 会被扫描两次。虽然分成两次放入 join_buffer，但是判断等值条件的次数还是不变的，依然是 (88+12)*1000=10 万次。
+
+再来看下，在这种情况下驱动表的选择问题：假设，驱动表的数据行数是 N，需要分 K 段才能完成算法流程，被驱动表的数据行数是 M。注意，这里的 K 不是常数，N 越大 K 就会越大，因此把 K 表示为λ*N，显然λ的取值范围是 (0,1)。
+
+所以，在这个算法的执行过程中：
+1. 扫描行数是 N+λ*N*M；
+2. 内存判断 N*M 次。
+
+显然，内存判断次数是不受选择哪个表作为驱动表影响的。而考虑到扫描行数，在 M 和 N 大小确定的情况下，N 小一些，整个算式的结果会更小。
+
+所以结论是，应该让小表当驱动表。
+
+当然，你会发现，在 N+λ*N*M 这个式子里，λ才是影响扫描行数的关键因素，这个值越小越好。
+
+刚刚我们说了 N 越大，分段数 K 越大。那么，N 固定的时候，什么参数会影响 K 的大小呢？（也就是λ的大小）答案是 join_buffer_size。join_buffer_size 越大，一次可以放入的行越多，分成的段数也就越少，对被驱动表的全表扫描次数就越少。
+
+这就是为什么，你可能会看到一些建议告诉你，如果你的 join 语句很慢，就把 join_buffer_size 改大。
+
+#### 理解了 MySQL 执行 join 的两种算法，现在我们再来试着回答开头的两个问题。
+
+第一个问题：能不能使用 join 语句？
+1. 如果可以使用 Index Nested-Loop Join 算法，也就是说可以用上被驱动表上的索引，其实是没问题的；
+2. 如果使用 Block Nested-Loop Join 算法，扫描行数就会过多。尤其是在大表上的 join 操作，这样可能要扫描被驱动表很多次，会占用大量的系统资源。所以这种 join 尽量不要用。
+
+所以在判断要不要使用 join 语句时，就是看 explain 结果里面，Extra 字段里面有没有出现“Block Nested Loop”字样。
+
+第二个问题是：如果要使用 join，应该选择大表做驱动表还是选择小表做驱动表？
+1. 如果是 Index Nested-Loop Join 算法，应该选择小表做驱动表；
+2. 如果是 Block Nested-Loop Join 算法：
+   - 在 join_buffer_size 足够大的时候，是一样的；
+   - 在 join_buffer_size 不够大的时候（这种情况更常见），应该选择小表做驱动表。
+
+所以，这个问题的结论就是，总是应该使用小表做驱动表。
+
+#### 什么叫作“小表”。
+前面的例子是没有加条件的。如果我在语句的 where 条件加上 t2.id<=50 这个限定条件，再来看下这两条语句：
+```sql
+select * from t1 straight_join t2 on (t1.b=t2.b) where t2.id<=50;
+select * from t2 straight_join t1 on (t1.b=t2.b) where t2.id<=50;
+```
+注意，为了让两条语句的被驱动表都用不上索引，所以 join 字段都使用了没有索引的字段 b。
+
+但如果是用第二个语句的话，join_buffer 只需要放入 t2 的前 50 行，显然是更好的。所以这里，“t2 的前 50 行”是那个相对小的表，也就是“小表”。
+
+再来看另外一组例子：
+```sql
+select t1.b,t2.* from  t1  straight_join t2 on (t1.b=t2.b) where t2.id<=100;
+select t1.b,t2.* from  t2  straight_join t1 on (t1.b=t2.b) where t2.id<=100;
+```
+这个例子里，表 t1 和 t2 都是只有 100 行参加 join。但是，这两条语句每次查询放入 join_buffer 中的数据是不一样的：
+- 表 t1 只查字段 b，因此如果把 t1 放到 join_buffer 中，则 join_buffer 中只需要放入 b 的值；
+- 表 t2 需要查所有的字段，因此如果把表 t2 放到 join_buffer 中的话，就需要放入三个字段 id、a 和 b。
+这里，我们应该选择表 t1 作为驱动表。也就是说在这个例子里，“只需要一列参与 join 的表 t1”是那个相对小的表。
+
+所以，更准确地说，在决定哪个表做驱动表的时候，应该是两个表按照各自的条件过滤，过滤完成之后，计算参与 join 的各个字段的总数据量，数据量小的那个表，就是“小表”，应该作为驱动表。
+
+
+#### 使用 Block Nested-Loop Join(BNL) 算法时，可能会对被驱动表做多次扫描。如果这个被驱动表是一个大的冷数据表，除了会导致 IO 压力大以外，还会对系统有什么影响呢？
+我们说到 InnoDB 的 LRU 算法的时候提到，由于 InnoDB 对 Bufffer Pool 的 LRU 算法做了优化，即：第一次从磁盘读入内存的数据页，会先放在 old 区域。如果 1 秒之后这个数据页不再被访问了，就不会被移动到 LRU 链表头部，这样对 Buffer Pool 的命中率影响就不大。
+
+但是，如果一个使用 BNL 算法的 join 语句，多次扫描一个冷表，而且这个语句执行时间超过 1 秒，就会在再次扫描冷表的时候，把冷表的数据页移到 LRU 链表头部。
+
+这种情况对应的，是冷表的数据量小于整个 Buffer Pool 的 3/8，能够完全放入 old 区域的情况。
+
+如果这个冷表很大，就会出现另外一种情况：业务正常访问的数据页，没有机会进入 young 区域。
+
+由于优化机制的存在，一个正常访问的数据页，要进入 young 区域，需要隔 1 秒后再次被访问到。但是，由于我们的 join 语句在循环读磁盘和淘汰内存页，进入 old 区域的数据页，很可能在 1 秒之内就被淘汰了。这样，就会导致这个 MySQL 实例的 Buffer Pool 在这段时间内，young 区域的数据页没有被合理地淘汰。也就是说，这两种情况都会影响 Buffer Pool 的正常运作。
+
+大表 join 操作虽然对 IO 有影响，但是在语句执行结束后，对 IO 的影响也就结束了。但是，对 Buffer Pool 的影响就是持续性的，需要依靠后续的查询请求慢慢恢复内存命中率。
+
+
+## # join语句怎么优化？
+前面学习了 join 语句的两种算法，分别是 Index Nested-Loop Join(NLJ) 和 Block Nested-Loop Join(BNL)。
+我们发现在使用 NLJ 算法的时候，其实效果还是不错的，比通过应用层拆分成多个语句然后再拼接查询结果更方便，而且性能也不会差。但是，BNL 算法在大表 join 的时候性能就差多了，比较次数等于两个表参与 join 的行数的乘积，很消耗 CPU 资源。
+
+当然了，这两个算法都还有继续优化的空间的。
+
+#### 测试表
+```sql
+
+create table t1(id int primary key, a int, b int, index(a));
+create table t2 like t1;
+drop procedure idata;
+delimiter ;;
+create procedure idata()
+begin
+  declare i int;
+  set i=1;
+  while(i<=1000)do
+    insert into t1 values(i, 1001-i, i);
+    set i=i+1;
+  end while;
+  
+  set i=1;
+  while(i<=1000000)do
+    insert into t2 values(i, i, i);
+    set i=i+1;
+  end while;
+
+end;;
+delimiter ;
+call idata();
+
+```
+为了便于后面量化说明，在表 t1 里，插入了 1000 行数据，每一行的 a=1001-id 的值。也就是说，表 t1 中字段 a 是逆序的。同时，在表 t2 中插入了 100 万行数据。
+
+#### Multi-Range Read 优化
+Multi-Range Read 优化 (MRR)。这个优化的主要目的是尽量使用顺序读盘。
+
+回表是指，InnoDB 在普通索引 a 上查到主键 id 的值后，再根据一个个主键 id 的值到主键索引上去查整行数据的过程。
+
+回表过程是一行行地查数据，还是批量地查数据？
+
+假设，我执行这个语句：``` select * from t1 where a>=1 and a<=100; ```
+
+主键索引是一棵 B+ 树，在这棵树上，每次只能根据一个主键 id 查到一行数据。因此，回表肯定是一行行搜索主键索引的。
+
+如果随着 a 的值递增顺序查询的话，id 的值就变成随机的，那么就会出现随机访问，性能相对较差。虽然“按行查”这个机制不能改，但是调整查询的顺序，还是能够加速的。
+
+因为大多数的数据都是按照主键递增顺序插入得到的，所以我们可以认为，如果按照主键的递增顺序查询的话，对磁盘的读比较接近顺序读，能够提升读性能。
+
+这，就是 MRR 优化的设计思路。此时，语句的执行流程变成了这样：
+1. 根据索引 a，定位到满足条件的记录，将 id 值放入 read_rnd_buffer 中 ;
+2. 将 read_rnd_buffer 中的 id 进行递增排序；
+3. 排序后的 id 数组，依次到主键 id 索引中查记录，并作为结果返回；
+4. 如果步骤 1 中，read_rnd_buffer 放满了，就会先执行完步骤 2 和 3，然后清空 read_rnd_buffer。之后继续找索引 a 的下个记录，并继续循环。
+
+这里，read_rnd_buffer 的大小是由 read_rnd_buffer_size 参数控制的。另外需要说明的是，如果你想要稳定地使用 MRR 优化的话，需要设置set optimizer_switch="mrr_cost_based=off"。（官方文档的说法，是现在的优化器策略，判断消耗的时候，会更倾向于不使用 MRR，把 mrr_cost_based 设置为 off，就是固定使用 MRR 了。）
+
+chatgpt的回答： MySQL 默认情况下不启用 MRR (Multi-Range Read) 优化是因为 MRR 优化在某些场景下可能会降低性能，且需要占用更多的内存。MRR 优化主要针对大量数据的分页查询操作进行优化，通过在扫描数据时，将多个相邻的行组成一个范围（Range），避免了单个行的重复扫描，从而提高了查询效率。但是，如果数据量较小或者查询模式不适合 MRR 优化，使用 MRR 可能会导致额外的开销，从而降低性能。 此外，MRR 优化也需要占用更多的系统内存，因为在使用 MRR 优化时，MySQL 会事先将多个行缓存在内存中，以避免重复扫描。如果缓存的数据量过大，可能会导致系统内存被耗尽，从而影响系统的稳定性和性能。 因此，在使用 MySQL 进行大量数据的分页查询时，可以考虑启用 MRR 优化，通过减少扫描次数来提高查询效率。但是，在一般的查询场景下，由于 MRR 优化可能会带来一些额外的开销，因此 MySQL 默认情况下不开启 MRR 优化。
+
+explain 结果中，如果看到 Extra 字段多了 Using MRR，表示的是用上了 MRR 优化。而且，由于我们在 read_rnd_buffer 中按照 id 做了排序，所以最后得到的结果集也是按照主键 id 递增顺序的。
+
+#### MRR总结下
+MRR 能够提升性能的核心在于，这条查询语句在索引 a 上做的是一个范围查询（也就是说，这是一个多值查询），可以得到足够多的主键 id。这样通过排序以后，再去主键索引查数据，才能体现出“顺序性”的优势。
+
+#### Batched Key Access
+理解了 MRR 性能提升的原理，就能理解 MySQL 在 5.6 版本后开始引入的 Batched Key Access(BKA) 算法了。这个 BKA 算法，其实就是对 NLJ 算法的优化。
+
+NLJ 算法执行的逻辑是：从驱动表 t1，一行行地取出 a 的值，再到被驱动表 t2 去做 join。也就是说，对于表 t2 来说，每次都是匹配一个值。这时，MRR 的优势就用不上了。
+
+那怎么才能一次性地多传些值给表 t2 呢？方法就是，从表 t1 里一次性地多拿些行出来，一起传给表 t2。
+
+既然如此，就把表 t1 的数据取出来一部分，先放到一个临时内存。这个临时内存不是别人，就是 join_buffer。
+
+我们知道 join_buffer 在 BNL 算法里的作用，是暂存驱动表的数据。但是在 NLJ 算法里并没有用。那么，我们刚好就可以复用 join_buffer 到 BKA 算法中。（所以BNL和NLJ的算法，join buffer的用途是不一样的）
+
+在 join_buffer 中放入的数据是 1~100 行，表示的是只会取查询需要的字段。当然，如果 join buffer 放不下 1~100 行的所有数据，就会把这 100 行数据分成多段执行。
+
+那么，这个 BKA 算法到底要怎么启用呢？如果要使用 BKA 优化算法的话，需要在执行 SQL 语句之前，先设置：
+```sql
+set optimizer_switch='mrr=on,mrr_cost_based=off,batched_key_access=on';
+```
+其中，前两个参数的作用是要启用 MRR。这么做的原因是，BKA 算法的优化要依赖于 MRR。
+
+
+#### BNL 算法的性能问题
+由于 InnoDB 对 Bufffer Pool 的 LRU 算法做了优化，即：第一次从磁盘读入内存的数据页，会先放在 old 区域。如果 1 秒之后这个数据页不再被访问了，就不会被移动到 LRU 链表头部，这样对 Buffer Pool 的命中率影响就不大。
+
+但是，如果一个使用 BNL 算法的 join 语句，多次扫描一个冷表，而且这个语句执行时间超过 1 秒，就会在再次扫描冷表的时候，把冷表的数据页移到 LRU 链表头部。这种情况对应的，是冷表的数据量小于整个 Buffer Pool 的 3/8，能够完全放入 old 区域的情况。
+
+如果这个冷表很大，就会出现另外一种情况：业务正常访问的数据页，没有机会进入 young 区域。
+
+由于优化机制的存在，一个正常访问的数据页，要进入 young 区域，需要隔 1 秒后再次被访问到。但是，由于我们的 join 语句在循环读磁盘和淘汰内存页，进入 old 区域的数据页，很可能在 1 秒之内就被淘汰了。这样，就会导致这个 MySQL 实例的 Buffer Pool 在这段时间内，young 区域的数据页没有被合理地淘汰。
+
+也就是说，这两种情况都会影响 Buffer Pool 的正常运作。
+
+**大表 join 操作虽然对 IO 有影响，但是在语句执行结束后，对 IO 的影响也就结束了。但是，对 Buffer Pool 的影响就是持续性的，需要依靠后续的查询请求慢慢恢复内存命中率。**
+
+为了减少这种影响，你可以考虑增大 join_buffer_size 的值，减少对被驱动表的扫描次数。(join_buffer_size值越大，驱动表被分块的数量越少，重复扫描被驱动表去判断是否匹配的过程就越少，buffer pool进入的该过程的数据页就会越少)
+
+BNL 算法对系统的影响主要包括三个方面：
+1. 可能会多次扫描被驱动表，占用磁盘 IO 资源；
+2. 判断 join 条件需要执行 M*N 次对比（M、N 分别是两张表的行数），如果是大表就会占用非常多的 CPU 资源；
+3. 可能会导致 Buffer Pool 的热数据被淘汰，影响内存命中率。
+
+我们执行语句之前，需要通过理论分析和查看 explain 结果的方式，确认是否要使用 BNL 算法。如果确认优化器会使用 BNL 算法，就需要做优化。优化的常见做法是，给被驱动表的 join 字段加上索引，把 BNL 算法转成 BKA 算法。
+
+#### BNL 转 BKA
+一些情况下，我们可以直接在被驱动表上建索引，这时就可以直接转成 BKA 算法了。
+
+但是，有时候你确实会碰到一些不适合在被驱动表上建索引的情况。比如下面这个语句：
+```sql
+select * from t1 join t2 on (t1.b=t2.b) where t2.b>=1 and t2.b<=2000;
+```
+开始的时候，在表 t2 中插入了 100 万行数据，但是经过 where 条件过滤后，需要参与 join 的只有 2000 行数据。如果这条语句同时是一个低频的 SQL 语句，那么再为这个语句在表 t2 的字段 b 上创建一个索引就很浪费了。
+
+但是，如果使用 BNL 算法来 join 的话，这个语句的执行流程是这样的：
+1. 把表 t1 的所有字段取出来，存入 join_buffer 中。这个表只有 1000 行，join_buffer_size 默认值是 256k，可以完全存入。
+2. 扫描表 t2，取出每一行数据跟 join_buffer 中的数据进行对比，
+   - 如果不满足 t1.b=t2.b，则跳过；
+   - 如果满足 t1.b=t2.b, 再判断其他条件，也就是是否满足 t2.b 处于[1,2000]的条件，如果是，就作为结果集的一部分返回，否则跳过。
+
+对于表 t2 的每一行，判断 join 是否满足的时候，都需要遍历 join_buffer 中的所有行。因此判断等值条件的次数是 1000*100 万 =10 亿次，这个判断的工作量很大。
+
+在表 t2 的字段 b 上创建索引会浪费资源，但是不创建索引的话这个语句的等值条件要判断 10 亿次，想想也是浪费。那么，有没有两全其美的办法呢？
+
+这时候，可以考虑使用临时表。使用临时表的大致思路是：
+1. 把表 t2 中满足条件的数据放在临时表 tmp_t 中；
+2. 为了让 join 使用 BKA 算法，给临时表 tmp_t 的字段 b 加上索引；
+3. 让表 t1 和 tmp_t 做 join 操作。
+
+此时，对应的 SQL 语句的写法如下：
+```sql
+create temporary table temp_t(id int primary key, a int, b int, index(b))engine=innodb;
+insert into temp_t select * from t2 where b>=1 and b<=2000;
+select * from t1 join temp_t on (t1.b=temp_t.b);
+```
+
+经过执行后，发现，整个过程 3 个语句执行时间的总和还不到 1 秒，相比于前面的 1 分 11 秒，性能得到了大幅提升。接下来，我们一起看一下这个过程的消耗：
+1. 执行 insert 语句构造 temp_t 表并插入数据的过程中，对表 t2 做了全表扫描，这里扫描行数是 100 万。
+2. 之后的 join 语句，扫描表 t1，这里的扫描行数是 1000；join 比较过程中，做了 1000 次带索引的查询。相比于优化前的 join 语句需要做 10 亿次条件判断来说，这个优化效果还是很明显的。
+
+总体来看，不论是在原表上加索引，还是用有索引的临时表，我们的思路都是让 join 语句能够用上被驱动表上的索引，来触发 BKA 算法，提升查询性能。
+
+#### 扩展 -hash join ( mysql 8.0 已实现 hash join )
+看到这里你可能发现了，其实上面计算 10 亿次那个操作，看上去有点儿傻。如果 join_buffer 里面维护的不是一个无序数组，而是一个哈希表的话，那么就不是 10 亿次判断，而是 100 万次 hash 查找。这样的话，整条语句的执行速度就快多了吧？
+
+确实如此。
+
+这，也正是 MySQL 的优化器和执行器一直被诟病的一个原因：不支持哈希 join。并且，MySQL 官方的 roadmap，也是迟迟没有把这个优化排上议程。
+
+实际上，这个优化思路，我们可以自己实现在业务端。实现流程大致如下：
+1. select * from t1;取得表 t1 的全部 1000 行数据，在业务端存入一个 hash 结构，比如 C++ 里的 set、PHP 的数组这样的数据结构。
+2. select * from t2 where b>=1 and b<=2000; 获取表 t2 中满足条件的 2000 行数据。
+3. 把这 2000 行数据，一行一行地取到业务端，到 hash 结构的数据表中寻找匹配的数据。满足匹配的条件的这行数据，就作为结果集的一行。
+
+理论上，这个过程会比临时表方案的执行速度还要快一些。如果你感兴趣的话，可以自己验证一下。(这也是现在业务代码里的主流做法)
+
+
+## # 为什么临时表可以重名？
+在上面join查询的时候我们使用了临时表：
+```sql
+create temporary table temp_t like t1;
+alter table temp_t add index(b);
+insert into temp_t select * from t2 where b>=1 and b<=2000;
+select * from t1 join temp_t on (t1.b=temp_t.b);
+```
+为什么要用临时表呢？直接用普通表是不是也可以呢？
+
+临时表有哪些特征，为什么它适合这个场景？
+
+这里，需要先理清一个容易误解的问题：有的人可能会认为，临时表就是内存表。但是，这两个概念可是完全不同的。
+1. 内存表，指的是使用 Memory 引擎的表，建表语法是 create table … engine=memory。这种表的数据都保存在内存里，系统重启的时候会被清空，但是表结构还在。除了这两个特性看上去比较“奇怪”外，从其他的特征上看，它就是一个正常的表。
+2. 而临时表，可以使用各种引擎类型 。如果是使用 InnoDB 引擎或者 MyISAM 引擎的临时表，写数据的时候是写到磁盘上的。当然，临时表也可以使用 Memory 引擎。
+
+#### 临时表的特性
+
+临时表在使用上有以下几个特点：
+1. 建表语法是 create temporary table …。
+2. 一个临时表只能被创建它的事务访问，对其他线程不可见。
+3. 临时表可以与普通表同名。
+4. 事务内有同名的临时表和普通表的时候，show create 语句，以及增删改查语句访问的是临时表。
+5. show tables 命令不显示临时表。
+
+由于临时表只能被创建它的 session 访问，所以在这个 session 结束的时候，会自动删除临时表。也正是由于这个特性，临时表就特别适合我们文章开头的 join 优化这种场景。为什么呢？
+
+原因主要包括以下两个方面：
+1. 不同事务的临时表是可以重名的，如果有多个事务同时执行 join 优化，不需要担心表名重复导致建表失败的问题。
+2. 不需要担心数据删除问题。如果使用普通表，在流程执行过程中客户端发生了异常断开，或者数据库发生异常重启，还需要专门来清理中间过程中生成的数据表。而临时表由于会自动回收，所以不需要这个额外的操作。
+
+#### 临时表的应用
+**由于不用担心线程之间的重名冲突，临时表经常会被用在复杂查询的优化过程中。其中，分库分表系统的跨库查询就是一个典型的使用场景。**
+
+一般分库分表的场景，就是要把一个逻辑上的大表分散到不同的数据库实例上。比如。将一个大表 ht，按照字段 f，拆分成 1024 个分表，然后分布到 32 个数据库实例上。
+
+一般情况下，这种分库分表系统都有一个中间层 proxy。不过，也有一些方案会让客户端直接连接数据库，也就是没有 proxy 这一层。
+
+在这种架构中，分区 key 的选择是以“减少跨库和跨表查询”为依据的。如果大部分的语句都会包含 f 的等值条件，那么就要用 f 做分区键。这样，在 proxy 这一层解析完 SQL 语句以后，就能确定将这条语句路由到哪个分表做查询。
+
+```sql
+select v from ht where f=N;
+```
+这时，我们就可以通过分表规则（比如，N%1024) 来确认需要的数据被放在了哪个分表上。这种语句只需要访问一个分表，是分库分表方案最欢迎的语句形式了。
+
+但是，如果这个表上还有另外一个索引 k，并且查询语句是这样的：
+
+```sql
+select v from ht where k >= M order by t_modified desc limit 100;
+```
+
+这时候，由于查询条件里面没有用到分区字段 f，只能到所有的分区中去查找满足条件的所有行，然后统一做 order by 的操作。这种情况下，有两种比较常用的思路。
+
+1. 第一种思路是，在 proxy 层的进程代码中实现排序。
+这种方式的优势是处理速度快，拿到分库的数据以后，直接在内存中参与计算。不过，这个方案的缺点也比较明显：
+   - 需要的开发工作量比较大。我们举例的这条语句还算是比较简单的，如果涉及到复杂的操作，比如 group by，甚至 join 这样的操作，对中间层的开发能力要求比较高；
+   - 对 proxy 端的压力比较大，尤其是很容易出现内存不够用和 CPU 瓶颈的问题。
+
+2. 另一种思路就是，把各个分库拿到的数据，汇总到一个 MySQL 实例的一个表中，然后在这个汇总实例上做逻辑操作。
+比如上面这条语句，执行流程可以类似这样：
+   - 在汇总库上创建一个临时表 temp_ht，表里包含三个字段 v、k、t_modified；
+   - 在各个分库上执行```select v,k,t_modified from ht_x where k >= M order by t_modified desc limit 100;```
+   - 把分库执行的结果插入到 temp_ht 表中；
+   - 执行```select v from temp_ht order by t_modified desc limit 100;```
+   - 得到结果。
+
+在实践中，我们往往会发现每个分库的计算量都不饱和，所以会直接把临时表 temp_ht 放到 32 个分库中的某一个上。
+
+#### 为什么临时表可以重名？(进程号+线程号+序列号，唯一确定一个临时表的表结构定义文件。)
+```sql
+create temporary table temp_t(id int primary key)engine=innodb;
+```
+执行这个语句的时候，MySQL 要给这个 InnoDB 表创建一个 frm 文件保存表结构定义，还要有地方保存表数据。
+
+这个 frm 文件放在临时文件目录下，文件名的后缀是.frm，前缀是“#sql{进程 id}_{线程 id}_ 序列号”。可以使用 select @@tmpdir 命令，来显示实例的临时文件目录。
+
+而关于表中数据的存放方式，在不同的 MySQL 版本中有着不同的处理方式：
+1. 在 5.6 以及之前的版本里，MySQL 会在临时文件目录下创建一个相同前缀、以.ibd 为后缀的文件，用来存放数据文件；
+2. 而从 5.7 版本开始，MySQL 引入了一个临时文件表空间，专门用来存放临时文件的数据。因此，我们就不需要再创建 ibd 文件了。
+
+从文件名的前缀规则，可以看到，其实创建一个叫作 t1 的 InnoDB 临时表，MySQL 在存储上认为我们创建的表名跟普通表 t1 是不同的，因此同一个库下面已经有普通表 t1 的情况下，还是可以再创建一个临时表 t1 的。
+
+MySQL 维护数据表，除了物理上要有文件外，内存里面也有一套机制区别不同的表，每个表都对应一个 table_def_key。
+1. 一个普通表的 table_def_key 的值是由“库名 + 表名”得到的，所以如果要在同一个库下创建两个同名的普通表，创建第二个表的过程中就会发现 table_def_key 已经存在了。
+2. 而对于临时表，table_def_key 在“库名 + 表名”基础上，又加入了“server_id+thread_id”。
+
+所以两个不线程务创建的两个临时表 t1，它们的 table_def_key 不同，磁盘文件名也不同，因此可以并存。
+
+在实现上，每个线程都维护了自己的临时表链表。这样每次线程内操作表的时候，先遍历链表，检查是否有这个名字的临时表，如果有就优先操作临时表，如果没有再操作普通表；在线程结束的时候，对链表里的每个临时表，执行 “DROP TEMPORARY TABLE + 表名”操作。
+
+这时候你会发现，binlog 中也记录了 DROP TEMPORARY TABLE 这条命令。你一定会觉得奇怪，临时表只在线程内自己可以访问，为什么需要写到 binlog 里面？
+
+#### 临时表和主备复制
+略
+
+#### 总结
+在实际应用中，临时表一般用于处理比较复杂的计算逻辑。由于临时表是每个线程自己可见的，所以不需要考虑多个线程执行同一个处理逻辑时，临时表的重名问题。在线程退出的时候，临时表也能自动删除，省去了收尾和异常处理的工作。
+
+在 binlog_format='row’的时候，临时表的操作不记录到 binlog 中，也省去了不少麻烦，这也可以成为你选择 binlog_format 时的一个考虑因素。
+
+需要注意的是，上面说到的这种临时表，是用户自己创建的 ，也可以称为用户临时表。与它相对应的，就是内部临时表，上面已经介绍过了。
+
+
+## # 什么时候会使用内部临时表？
