--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -3620,6 +3620,14 @@ insert into temp_t select * from t2 where b>=1 and b<=2000;
 select * from t1 join temp_t on (t1.b=temp_t.b);
 ```
 
+这里数据量可控，其实应该使用换成内存临时表性能更好，改写，将临时表 temp_t 改成内存临时表，并且在字段 b 上创建一个 hash 索引。即：
+```sql
+create temporary table temp_t(id int primary key, a int, b int, index (b))engine=memory;
+insert into temp_t select * from t2 where b>=1 and b<=2000;
+select * from t1 join temp_t on (t1.b=temp_t.b);
+```
+这样不论是导入数据的时间，还是执行 join 的时间，使用内存临时表的速度都比使用 InnoDB 临时表要更快一些。
+
 经过执行后，发现，整个过程 3 个语句执行时间的总和还不到 1 秒，相比于前面的 1 分 11 秒，性能得到了大幅提升。接下来，我们一起看一下这个过程的消耗：
 1. 执行 insert 语句构造 temp_t 表并插入数据的过程中，对表 t2 做了全表扫描，这里扫描行数是 100 万。
 2. 之后的 join 语句，扫描表 t1，这里的扫描行数是 1000；join 比较过程中，做了 1000 次带索引的查询。相比于优化前的 join 语句需要做 10 亿次条件判断来说，这个优化效果还是很明显的。
@@ -3798,7 +3806,7 @@ call idata();
 select id%10 as m, count(*) as c from t1 group by m;
 ```
 
-我改了下语句 ```select b as m, count(*) as c from t1 group by m;``` 发现也是需要使用临时表的，说明查询结果需要计算或者是非索引字段时 group by 都需要使用临时表的，至少笔记时间最新版的mysql是这样的
+我改了下语句 ```select b as m, count(*) as c from t1 group by m;``` 发现也是需要使用临时表的，说明查询结果需要计算或者是非索引字段时 group by 都需要使用临时表的，至少mysql8.0.31是这样的
 
 这个语句的逻辑是把表 t1 里的数据，按照 id%10 进行分组统计，并按照 m 的结果排序后输出。
 
@@ -3821,3 +3829,318 @@ select id%10 as m, count(*) as c from t1 group by m order by null;
 **如果内存临时表超过设置的内存大小，那么，这时候就会把内存临时表转成磁盘临时表，磁盘临时表默认使用的引擎是 InnoDB。**如果这个表 t1 的数据量很大，很可能这个查询需要的磁盘临时表就会占用大量的磁盘空间。
 
 #### group by 优化方法 -- 索引
+可以看到，不论是使用内存临时表还是磁盘临时表，group by 逻辑都需要构造一个带唯一索引的表，执行代价都是比较高的。如果表的数据量比较大，上面这个 group by 语句执行起来就会很慢，我们有什么优化的方法呢？
+
+要解决 group by 语句的优化问题，你可以先想一下这个问题：执行 group by 语句为什么需要临时表？
+
+group by 的语义逻辑，是统计不同的值出现的个数。但是，由于每一行的 id%10 的结果是无序的，所以我们就需要有一个临时表，来记录并统计结果。
+
+只要能保证 group by 时输入数据是有序的，就不需要临时表额外排序了，你一定想到了，InnoDB 的索引，就可以满足这个输入有序的条件。
+
+在 MySQL 5.7 版本支持了 generated column 机制，用来实现列数据的关联更新。你可以用下面的方法创建一个列 z，然后在 z 列上创建一个索引（如果是 MySQL 5.6 及之前的版本，你也可以创建普通列和索引，来解决这个问题）。
+```sql
+alter table t1 add column z int generated always as(id % 10), add index(z);
+```
+
+这样，索引 z 上的数据就是有序的了。上面的 group by 语句就可以改成：
+```sql
+select z, count(*) as c from t1 group by z;
+```
+
+查看执行计划，从 Extra 字段可以看到，这个语句的执行不再需要临时表，也不需要排序了。
+
+#### group by 优化方法 -- 直接排序
+所以，如果可以通过加索引来完成 group by 逻辑就再好不过了。但是，如果碰上不适合创建索引的场景，我们还是要老老实实做排序的。那么，这时候的 group by 要怎么优化呢？
+
+如果我们明明知道，一个 group by 语句中需要放到临时表上的数据量特别大，却还是要按照“先放到内存临时表，插入一部分数据后，发现内存临时表不够用了再转成磁盘临时表”，看上去就有点儿傻。
+
+那么，我们就会想了，MySQL 有没有让我们直接走磁盘临时表的方法呢？
+
+答案是，有的。在 group by 语句中加入 SQL_BIG_RESULT 这个提示（hint），就可以告诉优化器：这个语句涉及的数据量很大，请直接用磁盘临时表。
+
+#### 基于上面的 union、union all 和 group by 语句的执行过程的分析，我们来回答文章开头的问题：MySQL 什么时候会使用内部临时表？
+1. 如果语句执行过程可以一边读数据，一边直接得到结果，是不需要额外内存的，否则就需要额外的内存，来保存中间结果；
+2. join_buffer 是无序数组，sort_buffer 是有序数组，临时表是二维表结构；
+3. 如果执行逻辑需要用到二维表特性，就会优先考虑使用临时表。比如我们的例子中，union 需要用到唯一索引约束， group by 还需要用到另外一个字段来存累积计数。
+
+#### 问题
+1. 如果只需要去重，不需要执行聚合函数，distinct 和group by那种效率高一些呢？
+简单说下结论，只需要去重的话，如果没有limit，是一样的；
+有limit的话，distinct 快些。
+
+
+## # 都说InnoDB好，那还要不要使用Memory引擎？
+
+#### 测试表
+```sql
+
+create table t1(id int primary key, c int) engine=Memory;
+create table t2(id int primary key, c int) engine=innodb;
+insert into t1 values(1,1),(2,2),(3,3),(4,4),(5,5),(6,6),(7,7),(8,8),(9,9),(0,0);
+insert into t2 values(1,1),(2,2),(3,3),(4,4),(5,5),(6,6),(7,7),(8,8),(9,9),(0,0);
+
+```
+
+#### 内存表的数据组织结构
+分别执行 select * from t1 和 select * from t2。
+
+可以看到，内存表 t1 的返回结果里面 0 在最后一行，而 InnoDB 表 t2 的返回结果里 0 在第一行。
+
+出现这个区别的原因，要从这两个引擎的主键索引的组织方式说起。
+
+表 t2 用的是 InnoDB 引擎，它的主键索引 id 的组织方式，已经很熟悉了：InnoDB 表的数据就放在主键索引树上，主键索引是 B+ 树。
+
+主键索引上的值是有序存储的。在执行 select * 的时候，就会按照叶子节点从左到右扫描，所以得到的结果里，0 就出现在第一行。
+
+与 InnoDB 引擎不同，Memory 引擎的数据和索引是分开的。
+
+内存表的数据部分以数组的方式单独存放，而主键 id 索引里，存的是每个数据的位置。主键 id 是 hash 索引，可以看到索引上的 key 并不是有序的。
+
+在内存表 t1 中，当执行 select * 的时候，走的是全表扫描，也就是顺序扫描这个数组。因此，0 就是最后一个被读到，并放入结果集的数据。
+
+**可见，InnoDB 和 Memory 引擎的数据组织方式是不同的：**
+- InnoDB 引擎把数据放在主键索引上，其他索引上保存的是主键 id。这种方式，我们称之为索引组织表（Index Organizied Table）。
+- 而 Memory 引擎采用的是把数据单独存放，索引上保存数据位置的数据组织形式，我们称之为堆组织表（Heap Organizied Table）。
+
+**这两个引擎的一些典型不同：**
+1. InnoDB 表的数据总是有序存放的，而内存表的数据就是按照写入顺序存放的；
+2. 当数据文件有空洞的时候，InnoDB 表在插入新数据的时候，为了保证数据有序性，只能在固定的位置写入新值，而内存表找到空位就可以插入新值；
+3. 数据位置发生变化的时候，InnoDB 表只需要修改主键索引，而内存表需要修改所有索引；
+4. InnoDB 表用主键索引查询时需要走一次索引查找，用普通索引查询的时候，需要走两次索引查找。而内存表没有这个区别，所有索引的“地位”都是相同的。
+5. InnoDB 支持变长数据类型，不同记录的长度可能不同；内存表不支持 Blob 和 Text 字段，并且即使定义了 varchar(N)，实际也当作 char(N)，也就是固定长度字符串来存储，因此内存表的每行数据长度相同。
+
+需要指出的是，表 t1 的这个主键索引是哈希索引，因此如果执行范围查询，比如
+```sql
+select * from t1 where id<5;
+```
+是用不上主键索引的，需要走全表扫描。那如果要让内存表支持范围扫描，应该怎么办呢？
+
+MySQL 的 MEMORY 存储引擎默认使用哈希索引，这对于等值查询（例如，`WHERE column = value`）非常高效，但不支持范围查询（例如，`WHERE column BETWEEN value1 AND value2`）。为了让 MEMORY 表支持范围查询，你需要创建一个基于 B-树的索引。 在创建表或添加索引时，你可以指定使用 B-树索引而不是哈希索引。以下是一个例子： ```sql CREATE TABLE memory_table ( id INT NOT NULL, value VARCHAR(255), PRIMARY KEY USING BTREE (id) ) ENGINE=MEMORY; ``` 在这个例子中，`USING BTREE` 指定了使用 B-树索引而不是哈希索引。这样，你就可以在这个内存表上执行范围查询了。 如果你已经有一个 MEMORY 表，你也可以添加一个 B-树索引，例如： ```sql ALTER TABLE memory_table ADD INDEX USING BTREE (value); ``` 这会在 `value` 列上添加一个 B-树索引，你可以使用这个索引进行范围查询。
+
+#### hash 索引和 B-Tree 索引
+实际上，内存表也是支持 B-Tree 索引的。在 id 列上创建一个 B-Tree 索引，SQL 语句可以这么写：
+```sql
+alter table t1 add index a_btree_index using btree (id);
+```
+这样执行 ```select * from t1 where id<5``` 的时候，优化器会选择 B-Tree 索引，所以返回结果是 0 到 4。 使用 force index 强行使用主键 id 这个索引，id=0 这一行就在结果集的最末尾了。
+
+其实，一般在我们的印象中，内存表的优势是速度快，其中的一个原因就是 Memory 引擎支持 hash 索引。当然，更重要的原因是，内存表的所有数据都保存在内存，而内存的读写速度总是比磁盘快。
+
+但是，接下来我要跟你说明，为什么我不建议你在生产环境上使用内存表。这里的原因主要包括两个方面：
+1. 锁粒度问题；
+2. 数据持久化问题。
+
+#### 内存表的锁
+内存表不支持行锁，只支持表锁。因此，一张表只要有更新，就会堵住其他所有在这个表上的读写操作。**需要注意的是，这里的表锁跟之前我们介绍过的 MDL 锁不同，但都是表级的锁。**
+
+用上面建的内存表t1跑个例子看看：
+
+```py
+import concurrent.futures
+import pymysql
+ 
+# 连接MySQL数据库的配置
+mysql_config = {
+    'host': '127.0.0.1',
+    'user': 'root',
+    'password': '',
+    'database': 'test'
+}
+ 
+# 创建数据库连接
+def create_connection():
+    connection = pymysql.connect(**mysql_config)
+    return connection
+ 
+# 执行事务
+def execute_transaction(connection, transaction):
+    with connection.cursor() as cursor:
+        cursor.execute(transaction)
+        connection.commit()
+ 
+# 主程序
+def main():
+    # 创建连接
+    connection1 = create_connection()
+    connection2 = create_connection()
+ 
+    # 定义两个事务
+    transaction1 = "update t1 set id=sleep(50) where id=1;"
+    transaction2 = "select * from t1 where id=2;"
+ 
+    # 使用ThreadPoolExecutor并行提交
+    with concurrent.futures.ThreadPoolExecutor() as executor:
+        future1 = executor.submit(execute_transaction, connection1, transaction1)
+        future2 = executor.submit(execute_transaction, connection2, transaction2)
+ 
+        # 等待任务完成
+        concurrent.futures.wait([future1, future2])
+ 
+# 运行主程序
+if __name__ == '__main__':
+    main()
+
+```
+此时再看看 show processlist; 
+
+会发现 transaction2 State显示：Waiting for table level lock
+
+跟行锁比起来，表锁对并发访问的支持不够好。所以，内存表的锁粒度问题，决定了它在处理并发事务的时候，性能也不会太好。
+
+#### 数据持久性问题
+数据放在内存中，是内存表的优势，但也是一个劣势。因为，数据库重启的时候，所有的内存表都会被清空。
+
+你可能会说，如果数据库异常重启，内存表被清空也就清空了，不会有什么问题啊。但是，在高可用架构下，内存表的这个特点简直可以当做 bug 来看待了。为什么这么说呢？
+
+在M-S架构下：备库重启，内存表清空，此时客户端发送更新请求，主库同步到备库时，主备同步会停止。 在M-M架构下：主库重启后，会在binlog里面写一行delete from t1，在备库重启的时候，备库 binlog 里的 delete 语句就会传到主库，然后把主库内存表的内容删除。这样你在使用的时候就会发现，主库的内存表数据突然被清空了。
+
+基于上面的分析，你可以看到，内存表并不适合在生产环境上作为普通数据表使用。
+1. 如果你的表更新量大，那么并发度是一个很重要的参考指标，InnoDB 支持行锁，并发度比内存表好；
+2. 能放到内存表的数据量都不大。如果你考虑的是读的性能，一个读 QPS 很高并且数据量不大的表，即使是使用 InnoDB，数据也是都会缓存在 InnoDB Buffer Pool 里的。因此，使用 InnoDB 表的读性能也不会差。
+
+所以，我建议你把普通内存表都用 InnoDB 表来代替。但是，有一个场景却是例外的。
+
+**用户临时表。在数据量可控，不会耗费过多内存的情况下，你可以考虑使用内存表。**
+内存临时表刚好可以无视内存表的两个不足，主要是下面的三个原因：
+1. 临时表不会被其他线程访问，没有并发性的问题；
+2. 临时表重启后也是需要删除的，清空数据这个问题不存在；
+3. 备库的临时表也不会影响主库的用户线程。
+
+
+## # 自增主键为什么不是连续的？
+我们提到过自增主键，由于自增主键可以让主键索引尽量地保持递增顺序插入，避免了页分裂，因此索引更紧凑。
+
+有的业务设计依赖于自增主键的连续性，也就是说，这个设计假设自增主键是连续的。但实际上，这样的假设是错的，因为自增主键不能保证连续递增。
+
+那么什么情况下自增主键会出现 “空洞”？
+
+#### 测试表
+```sql
+CREATE TABLE `t` (
+  `id` int(11) NOT NULL AUTO_INCREMENT,
+  `c` int(11) DEFAULT NULL,
+  `d` int(11) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  UNIQUE KEY `c` (`c`)
+) ENGINE=InnoDB;
+```
+
+#### 自增值保存在哪儿？
+在这个空表 t 里面插入一行数据，再执行 show create table 命令，就可以看到如下所示的结果：
+```
+CREATE TABLE `t39` (
+  `id` int NOT NULL AUTO_INCREMENT,
+  `c` int DEFAULT NULL,
+  `d` int DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  UNIQUE KEY `c` (`c`)
+) ENGINE=InnoDB AUTO_INCREMENT=2 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci
+```
+
+可以看到，表定义里面出现了一个 AUTO_INCREMENT=2，表示下一次插入数据时，如果需要自动生成自增值，会生成 id=2。
+
+其实，这个输出结果容易引起这样的误解：自增值是保存在表结构定义里的。实际上，表的结构定义存放在后缀名为.frm 的文件中，但是并不会保存自增值。
+
+不同的引擎对于自增值的保存策略不同:
+1. MyISAM 引擎的自增值保存在数据文件中。
+2. InnoDB 引擎的自增值，其实是保存在了内存里，并且到了 MySQL 8.0 版本后，才有了“自增值持久化”的能力，也就是才实现了“如果发生重启，表的自增值可以恢复为 MySQL 重启前的值”，具体情况是：
+   - 在 MySQL 5.7 及之前的版本，自增值保存在内存里，并没有持久化。每次重启后，第一次打开表的时候，都会去找自增值的最大值 max(id)，然后将 max(id)+1 作为这个表当前的自增值。
+   举例来说，如果一个表当前数据行里最大的 id 是 10，AUTO_INCREMENT=11。这时候，我们删除 id=10 的行，AUTO_INCREMENT 还是 11。但如果马上重启实例，重启后这个表的 AUTO_INCREMENT 就会变成 10。
+   也就是说，MySQL 重启可能会修改一个表的 AUTO_INCREMENT 的值。
+   - 在 MySQL 8.0 版本，将自增值的变更记录在了 redo log 中，重启的时候依靠 redo log 恢复重启之前的值。
+
+理解了 MySQL 对自增值的保存策略以后，再看看自增值修改机制。
+
+#### 自增值修改机制
+在 MySQL 里面，如果字段 id 被定义为 AUTO_INCREMENT，在插入一行数据的时候，自增值的行为如下：
+1. 如果插入数据时 id 字段指定为 0、null 或未指定值，那么就把这个表当前的 AUTO_INCREMENT 值填到自增字段；
+2. 如果插入数据时 id 字段指定了具体的值，就直接使用语句里指定的值。
+
+根据要插入的值和当前自增值的大小关系，自增值的变更结果也会有所不同。假设，某次要插入的值是 X，当前的自增值是 Y。
+1. 如果 X<Y，那么这个表的自增值不变；
+2. 如果 X≥Y，就需要把当前自增值修改为新的自增值。
+
+新的自增值生成算法是：从 auto_increment_offset 开始，以 auto_increment_increment 为步长，持续叠加，直到找到第一个大于 X 的值，作为新的自增值。
+
+其中，auto_increment_offset 和 auto_increment_increment 是两个系统参数，分别用来表示自增的初始值和步长，默认值都是 1。
+
+注意：在一些场景下，使用的就不全是默认值。比如，双 M 的主备结构里要求双写的时候，我们就可能会设置成 auto_increment_increment=2，让一个库的自增 id 都是奇数，另一个库的自增 id 都是偶数，避免两个库生成的主键发生冲突。
+
+当 auto_increment_offset 和 auto_increment_increment 都是 1 的时候，新的自增值生成逻辑很简单，就是：
+1. 如果准备插入的值 >= 当前自增值，新的自增值就是“准备插入的值 +1”；
+2. 否则，自增值不变。
+
+在这两个参数都设置为 1 的时候，自增主键 id 却不能保证是连续的，这是什么原因呢？
+
+#### 自增值的修改时机
+要回答这个问题，我们就要看一下自增值的修改时机。
+
+假设，表 t 里面已经有了 (1,1,1) 这条记录，这时我再执行一条插入数据命令：```insert into t values(null, 1, 1); ```
+这个语句的执行流程就是：
+1. 执行器调用 InnoDB 引擎接口写入一行，传入的这一行的值是 (0,1,1);
+2. InnoDB 发现用户没有指定自增 id 的值，获取表 t 当前的自增值 2；
+3. 将传入的行的值改成 (2,1,1);
+4. 将表的自增值改成 3；
+5. 继续执行插入数据操作，由于已经存在 c=1 的记录，所以报 Duplicate key error，语句返回。
+
+可以看到，这个表的自增值改成 3，是在真正执行插入数据的操作之前。这个语句真正执行的时候，因为碰到唯一键 c 冲突，所以 id=2 这一行并没有插入成功，但也没有将自增值再改回去。
+
+所以，在这之后，再插入新的数据行时，拿到的自增 id 就是 3。也就是说，出现了自增主键不连续的情况。
+
+可以看到，这个操作序列复现了一个自增主键 id 不连续的现场（没有 id=2 的行）。可见，唯一键冲突是导致自增主键 id 不连续的第一种原因。
+
+同样地，事务回滚也会产生类似的现象，这就是第二种原因。
+
+为什么在出现唯一键冲突或者回滚的时候，MySQL 没有把表 t 的自增值改回去呢？如果把表 t 的当前自增值从 3 改回 2，再插入新数据的时候，不就可以生成 id=2 的一行数据了吗？
+
+其实，MySQL 这么设计是为了提升性能。接下来，分析一下这个设计思路，看看自增值为什么不能回退。
+
+假设有两个并行执行的事务，在申请自增值的时候，为了避免两个事务申请到相同的自增 id，肯定要加锁，然后顺序申请。
+1. 假设事务 A 申请到了 id=2， 事务 B 申请到 id=3，那么这时候表 t 的自增值是 4，之后继续执行。
+2. 事务 B 正确提交了，但事务 A 出现了唯一键冲突。
+3. 如果允许事务 A 把自增 id 回退，也就是把表 t 的当前自增值改回 2，那么就会出现这样的情况：表里面已经有 id=3 的行，而当前的自增 id 值是 2。
+4. 接下来，继续执行的其他事务就会申请到 id=2，然后再申请到 id=3。这时，就会出现插入语句报错“主键冲突”。
+
+而为了解决这个主键冲突，有两种方法：
+1. 每次申请 id 之前，先判断表里面是否已经存在这个 id。如果存在，就跳过这个 id。但是，这个方法的成本很高。因为，本来申请 id 是一个很快的操作，现在还要再去主键索引树上判断 id 是否存在。
+2. 把自增 id 的锁范围扩大，必须等到一个事务执行完成并提交，下一个事务才能再申请自增 id。这个方法的问题，就是锁的粒度太大，系统并发能力大大下降。
+
+可见，这两个方法都会导致性能问题。造成这些麻烦的罪魁祸首，就是我们假设的这个“允许自增 id 回退”的前提导致的。
+
+因此，InnoDB 放弃了这个设计，语句执行失败也不回退自增 id。也正是因为这样，**所以才只保证了自增 id 是递增的，但不保证是连续的。**
+
+#### 自增锁的优化
+可以看到，自增 id 锁并不是一个事务锁，而是每次申请完就马上释放，以便允许别的事务再申请。其实，在 MySQL 5.1 版本之前，并不是这样的。
+
+在 MySQL 5.0 版本的时候，自增锁的范围是语句级别。也就是说，如果一个语句申请了一个表自增锁，这个锁会等语句执行结束以后才释放。显然，这样设计会影响并发度。
+
+MySQL 5.1.22 版本引入了一个新策略，新增参数 innodb_autoinc_lock_mode，默认值是 1。
+1. 这个参数的值被设置为 0 时，表示采用之前 MySQL 5.0 版本的策略，即语句执行结束后才释放锁；
+2. 这个参数的值被设置为 1 时：
+   - 普通 insert 语句，自增锁在申请之后就马上释放；
+   - 类似 insert … select 这样的批量插入数据的语句，自增锁还是要等语句结束后才被释放；
+3. 这个参数的值被设置为 2 时，所有的申请自增主键的动作都是申请后就释放锁。
+你一定有两个疑问：为什么默认设置下，insert … select 要使用语句级的锁？为什么这个参数的默认值不是 2？答案是，这么设计还是为了数据的一致性。
+
+因此，在生产上，尤其是有 insert … select 这种批量插入数据的场景时，从并发插入数据性能的角度考虑，我建议你这样设置：innodb_autoinc_lock_mode=2 ，并且 binlog_format=row. 这样做，既能提升并发性，又不会出现数据一致性问题。（MySQL 8.0 的默认设置就这样）
+
+需要注意的是，这里说的批量插入数据，包含的语句类型是 insert … select、replace … select 和 load data 语句。
+
+但是，在普通的 insert 语句里面包含多个 value 值的情况下，即使 innodb_autoinc_lock_mode 设置为 1，也不会等语句执行完成才释放锁。因为这类语句在申请自增 id 的时候，是可以精确计算出需要多少个 id 的，然后一次性申请，申请完成后锁就可以释放了。
+
+也就是说，批量插入数据的语句，之所以需要这么设置，是因为“不知道要预先申请多少个 id”。
+
+既然预先不知道要申请多少个自增 id，那么一种直接的想法就是需要一个时申请一个。但如果一个 select … insert 语句要插入 10 万行数据，按照这个逻辑的话就要申请 10 万次。显然，这种申请自增 id 的策略，在大批量插入数据的情况下，不但速度慢，还会影响并发插入的性能。
+
+因此，对于批量插入数据的语句，MySQL 有一个批量申请自增 id 的策略：
+1. 语句执行过程中，第一次申请自增 id，会分配 1 个；
+2. 1 个用完以后，这个语句第二次申请自增 id，会分配 2 个；
+3. 2 个用完以后，还是这个语句，第三次申请自增 id，会分配 4 个；
+4. 依此类推，同一个语句去申请自增 id，每次申请到的自增 id 个数都是上一次的两倍。
+
+这是主键 id 出现自增 id 不连续的第三种原因。
+
+总结第三种原因就是：对于批量插入数据的语句，MySQL 有一个批量申请自增 id 的策略： 语句执行过程中，第一次申请自增 id，会分配 1 个； 1 个用完以后，这个语句第二次申请自增 id，会分配 2 个； 2 个用完以后，还是这个语句，第三次申请自增 id，会分配 4 个； 依此类推，同一个语句去申请自增 id，每次申请到的自增 id 个数都是上一次的两倍。
+
+
+## # insert语句的锁为什么这么多？
