--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -4144,3 +4144,130 @@ MySQL 5.1.22 版本引入了一个新策略，新增参数 innodb_autoinc_lock_m
 
 
 ## # insert语句的锁为什么这么多？
+前面提到 MySQL 对自增主键锁做了优化，尽量在申请到自增 id 以后，就释放自增锁。
+
+因此，insert 语句是一个很轻量的操作。不过，这个结论对于“普通的 insert 语句”才有效。也就是说，还有些 insert 语句是属于“特殊情况”的，在执行过程中需要给其他资源加锁，或者无法在申请到自增 id 以后就立马释放自增锁。
+
+#### 测试表
+```sql
+CREATE TABLE `t` (
+  `id` int(11) NOT NULL AUTO_INCREMENT,
+  `c` int(11) DEFAULT NULL,
+  `d` int(11) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  UNIQUE KEY `c` (`c`)
+) ENGINE=InnoDB;
+
+insert into t values(null, 1,1);
+insert into t values(null, 2,2);
+insert into t values(null, 3,3);
+insert into t values(null, 4,4);
+
+create table t2 like t
+```
+
+#### insert … select 语句
+现在，一起来看看为什么在可重复读隔离级别下，binlog_format=statement 时执行：
+```sql
+insert into t2(c,d) select c,d from t;
+```
+这个语句时，为啥需要对表 t 的所有行和间隙加锁呢？
+
+其实，这个问题我们需要考虑的还是日志和数据的一致性。我们看下这个执行序列：
+| 事务A | 事务B |
+| ----- | ----- |
+| insert into t values(-1,-1,-1) | insert into t2(c,d) select c, d from t; |
+
+实际的执行效果是，如果事务B先执行，由于这个语句对表 t 主键索引加了 (-∞,1]这个 next-key lock，会在语句执行完成后，才允许事务A的 insert 语句执行。
+
+但如果没有锁的话，就可能出现事务B的 insert 语句先执行，但是后写入 binlog 的情况。于是，在 binlog_format=statement 的情况下，binlog 里面就记录了这样的语句序列：
+```sql
+insert into t values(-1,-1,-1);
+insert into t2(c,d) select c,d from t;
+```
+这个语句到了备库执行，就会把 id=-1 这一行也写到表 t2 中，出现主备不一致。
+
+#### insert 循环写入
+当然了，执行 insert … select 的时候，对目标表也不是锁全表，而是只锁住需要访问的资源。
+
+如果现在有这么一个需求：要往表 t2 中插入一行数据，这一行的 c 值是表 t 中 c 值的最大值加 1。
+此时，可以这么写这条 SQL 语句 ：
+```sql
+insert into t2(c,d) (select c+1, d from t force index(c) order by c desc limit 1);
+```
+这个语句的加锁范围，就是表 t 索引 c 上的 (3,4]和 (4,supremum]这两个 next-key lock，以及主键索引上 id=4 这一行。
+
+如果将语句改成：
+```sql
+insert into t(c,d)  (select c+1, d from t force index(c) order by c desc limit 1);
+```
+
+通过慢查询日志可以看到，这时候的 Rows_examined 的值是 5。
+
+从这条语句的 explain 结果的 Extra 字段可以看到“Using temporary”字样，表示这个语句用到了临时表。也就是说，执行过程中，需要把表 t 的内容读出来，写入临时表。
+
+explain中 rows 显示的是 1，不妨先对这个语句的执行流程做一个猜测：如果说是把子查询的结果读出来（扫描 1 行），写入临时表，然后再从临时表读出来（扫描 1 行），写回表 t 中。那么，这个语句的扫描行数就应该是 2，而不是 5。
+
+所以，这个猜测不对。实际上，Explain 结果里的 rows=1 是因为受到了 limit 1 的影响。
+
+从另一个角度考虑的话，我们可以看看 InnoDB 扫描了多少行：就是在执行这个语句前后查看 Innodb_rows_read 的结果。分析结果得出：对表 t 做了全表扫描。
+
+这样，我们就把整个执行过程理清楚了：
+1. 创建临时表，表里有两个字段 c 和 d。
+2. 按照索引 c 扫描表 t，依次取 c=4、3、2、1，然后回表，读到 c 和 d 的值写入临时表。这时，Rows_examined=4。
+3. 由于语义里面有 limit 1，所以只取了临时表的第一行，再插入到表 t 中。这时，Rows_examined 的值加 1，变成了 5。
+
+也就是说，这个语句会导致在表 t 上做全表扫描，并且会给索引 c 上的所有间隙都加上共享的 next-key lock。所以，这个语句执行期间，其他事务不能在这个表上插入数据。
+
+至于这个语句的执行为什么需要临时表，原因是这类一边遍历数据，一边更新数据的情况，如果读出来的数据直接写回原表，就可能在遍历过程中，读到刚刚插入的记录，新插入的记录如果参与计算逻辑，就跟语义不符。
+
+由于实现上这个语句没有在子查询中就直接使用 limit 1，从而导致了这个语句的执行需要遍历整个表 t。它的优化方法也比较简单，就是用前面介绍的方法，先 insert into 到临时表 temp_t，这样就只需要扫描一行；然后再从表 temp_t 里面取出这行数据插入表 t1。
+
+当然，由于这个语句涉及的数据量很小，你可以考虑使用内存临时表来做这个优化。使用内存临时表优化时，语句序列的写法如下：
+```sql
+create temporary table temp_t(c int,d int) engine=memory;
+insert into temp_t  (select c+1, d from t force index(c) order by c desc limit 1);
+insert into t select * from temp_t;
+drop table temp_t;
+```
+
+**insert ... select 语句前后表不同，只会扫描需要的行，也就是锁扫描过的行，但是如果前后表相同，会导致锁全表。所以对同一个表做这种操作，可以使用临时内存表做优化，减少锁范围**
+
+#### insert 唯一键冲突
+前面的两个例子是使用 insert … select 的情况，接下来要介绍的这个例子就是最常见的 insert 语句出现唯一键冲突的情况。
+
+对于有唯一键的表，插入数据时出现唯一键冲突也是常见的情况了。我先给你举一个简单的唯一键冲突的例子。
+| 事务A | 事务B |
+| ----- | ----- |
+| insert into t values(10,10,10)                                           |                                         |
+| begin; insert into t values(11,10,10) (Duplicate entry '10' for key 'c') |                                         |
+|                                                                          | insert into t values(12,9,9)(blocked)   |
+
+这个例子也是在可重复读（repeatable read）隔离级别下执行的。可以看到，事务B要执行的 insert 语句进入了锁等待状态。
+
+也就是说，事务A执行的 insert 语句，发生唯一键冲突的时候，并不只是简单地报错返回，还在冲突的索引上加了锁。我们前面说过，一个 next-key lock 就是由它右边界的值定义的。这时候，事务A持有索引 c 上的 (5,10]共享 next-key lock（读锁）。
+
+至于为什么要加这个读锁，其实我也没有找到合理的解释。从作用上来看，这样做可以避免这一行被别的事务删掉。
+
+
+#### insert into … on duplicate key update
+上面这个例子是主键冲突后直接报错，如果是改写成
+```sql
+insert into t values(11,10,10) on duplicate key update d=100; 
+```
+的话，就会给索引 c 上 (5,10] 加一个排他的 next-key lock（写锁）。
+
+insert into … on duplicate key update 这个语义的逻辑是，插入一行数据，如果碰到唯一键约束，就执行后面的更新语句。
+
+注意，如果有多个列违反了唯一性约束，就会按照索引的顺序，修改跟第一个索引冲突的行。
+
+现在表 t 里面已经有了 (1,1,1) 和 (2,2,2) 这两行，查看语句执行的效果：可以看到，主键 id 是先判断的，MySQL 认为这个语句跟 id=2 这一行冲突，所以修改的是 id=2 的行。
+
+需要注意的是，执行这条语句的 affected rows 返回的是 2，很容易造成误解。实际上，真正更新的只有一行，只是在代码实现上，insert 和 update 都认为自己成功了，update 计数加了 1， insert 计数也加了 1。
+
+#### 总结
+- insert … select 是很常见的在两个表之间拷贝数据的方法。你需要注意，在可重复读隔离级别下，这个语句会给 select 的表里扫描到的记录和间隙加读锁。
+- 而如果 insert 和 select 的对象是同一个表，则有可能会造成循环写入。这种情况下，我们需要引入用户临时表来做优化。
+- insert 语句如果出现唯一键冲突，会在冲突的唯一值上加共享的 next-key lock(S 锁)。因此，碰到由于唯一键约束导致报错后，要尽快提交或回滚事务，避免加锁时间过长。
+
+## # 怎么最快地复制一张表？
