--- a/mysql/MySql实战45_2024.md
+++ b/mysql/MySql实战45_2024.md
@@ -1,5 +1,8 @@
 # Mysql实战45讲（林晓斌老师）
 
+## # 有哪些比较好的习惯和提高 SQL 效率的方法？
+这个方法，总结起来就是：要多写 SQL，培养自己对 SQL 语句执行效率的感觉。以后再写或者建索引的时候，知道这个语句执行下去大概的时间复杂度，是全表扫描还是索引扫描、是不是需要回表，在心里都有一个大概的概念。
+
 写sql时，务必多使用：explain + show warning 等这些语句来在测试环境检测语句的问题与性能表现
 
 ## # mysql 部分名词解释
