--- a/Interview/25.md
+++ b/Interview/25.md
@@ -14,3 +14,14 @@
 
 ## # 个人职业规划
 技术不断更新迭代，作为开发人员就要有活到老学到老的态度，所以目前主要是希望有更多技术上的突破，能解决更多更复杂的问题，技术突破不是说学了什么技术，而是学了什么技术解决什么问题，然后不断实践，这才是我所说的技术突破。（根据公司岗位信息展开技术讨论）
+
+
+我是xxx，2020年应届本科毕业，5年Golang开发经验。我的主要开发经历有三段。
+
+第一段是在校期间，通过自学php和java，多次组织团队接取外包项目，赚零花钱的同时，也提前吸收了一些实际项目开发经验。
+
+第二阶段是边锋网络时期，岗位是golang开发工程师，2年工作时长，前期主要负责一些运营活动的开发与维护，后期主要参与融合项目的游戏基础服务重构，主要负责包厢业务（相当于一个游戏中台，负责提供包厢玩法的房间生命周期管理）服务重构和运营活动服务重构，服务重构不仅降低了维护成本，还提升了服务稳定性，主要用到的技术有kratos微服务框架、k8s和docker，以及mysql、redis和消息中间件。
+
+第三阶段是游卡时期，岗位也是golang开发工程师，近3年工作时长，刚开始进的是三国杀项目部，入职半个月后转入创新项目部，负责新项目的游戏周边系统的设计和开发工作，主要项目有从0到1实现了秒杀系统，排行榜、玩家公会等系统模块。主要用到的技术有mysql、redis、etcd、kafka等
+
+目前离职的原因主要是，周边系统已经基本成型，后续的重点可能是在游戏玩法运营上，之前本来计划重构项目技术框架的，后来因为种种原因，也取消了，个人不想深度参与游戏具体玩法，合同也快到期了，趁这个机会，个人想换下赛道，离开游戏行业
