--- a/软考/计算机系统基础知识笔记.md
+++ b/软考/计算机系统基础知识笔记.md
@@ -1,2 +1,52 @@
 
 ## 计算机系统基础知识
+
+1. 冯诺依曼5大部件：控制器、运算器、存储器、输入设备、输出设备
+
+2. 运算器和控制器是处理器的核心部件。处理器的指令按照其复杂程度可分为复杂指令集（CISC，采用微程序控制的方式）和精简指令集（RISC，硬布线方式，即大量使用寄存器）
+
+3. 常见的处理器芯片：图形处理器（GPU）处理器、信号处理器（DSP，专用于实时的数字信号处理，采用哈佛架构，而不是冯诺依曼）以及现场可编程逻辑门阵列（FPGA，一般是嵌入式设备用）等
+
+#### 缓存分类
+
+1. 片上缓存（一般为SRAM）：在处理器核心中直接集成的缓存，容量较小，一般为16kB~512kB，按照不同的设计可能划分为一级或二级。
+
+2. 片外缓存（一般为SRAM）：在处理器核心外的缓存，需要经过交换互联开关访问，容量较片上缓存略大，可以为256kB~4MB。按照层级被称为L2Cache或者L3Cache，或者称为平台Cache。
+
+3. 主存（内存，通常为DRAM）：以独立的部件/芯片存在，通过总线与处理器连接。DRAM依赖不断充电维持其中的数据，容量在数百MB至数十GB之间。
+
+4. 外存：可以是磁带、磁盘、光盘和各类Flash等介质器件，这类设备访问速度慢，但容量大，且在掉电后能够保持其数据。
+
+#### 总线
+
+1. 内总线：用于各类芯片内部互联，也可称为片上总线或片内总线。
+
+2. 系统总线（一般分为三种：控制总线、地址总线、数据总线）：狭义是指计算机中CPU、主存、I/O接口的总线；广义上还应包含计算机系统内，经由系统总线再次级联的总线，常被称为局部总线。
+
+3. 外部总线：计算机板和外部设备之间，或者计算机系统之间互联的总线，又称为通信总线。
+
+4. 总线之间通过桥实现连接，它是一种特殊的外设，主要实现总线协议间的转换。
+
+5. 总线的性能指标常见有：总线带宽、总线服务质量QoS、总线时延和总线抖动等。
+
+6. 计算机总线存在许多种类，常见的有并行总线（PCI、IDE、PCle、ATA等，性能好，成本高，只适合短距离传输）和串行总线（USB、STAT、CAN、RS-232、RS-485、RapidIO和以太网等，适合长距离传输）。
+
+7. 接口是指同一计算机不同功能层之间的通讯规则，计算机接口有多种，常见的包括显示类接口（HDMI、DVI等），音频输入输出类接口（TRS、RCA、XLR等），网络类接口（RJ45、FC等），PS/2接口，USB接口，SATA接口，LPT打印接口和RS-232接口等。此外，像离散量接口与A/D转换接口等这类接口一般数据非标准接口，而是随需求而设计的。
+
+8. 对于总线而言，一种总线可能存在多种接口。
+
+## # 计算机软件
+
+#### 文件系统（只记录重要且容易忘记的）
+
+1. 文件共享中的文件链接有硬链接和符号链接两种
+
+文件的硬链接是指两个文件目录表目指向同一个索引结点的链接，该链接也称基于索引结点的链接，换句话说，硬链接是指不同文件名与同一个文件实体的链接。不利于删除。
+
+符合链接建立新的文件或者目录，并与原文件或目录的路径名进行映射，当访问一个符号链接时，系统通过该映射找到原文件的路径，并对其进行访问。
+
+2. 文件系统对文件的保护常采用存取控制的方式进行。
+
+实现方式有：存取控制矩阵、存取控制表（linux系统使用，列出一个文件的所有权限用户）、用户权限表（列出一个用户能够访问的所有文件）、密码。
+
+3. 外存空闲空间管理的数据结构通常称为磁盘分配表。空闲空间管理方法有：1. 空闲区表；2.位示图；3.空闲块链；4.组成链接法。
