--- a/软考/信息系统.md
+++ b/软考/信息系统.md
@@ -24,8 +24,8 @@
 - -- 如自动售票机等
 
 2. 管理信息系统（MIS）（已经不火了）
-- -- 高度集成化的人机信息系统
-- -- 金字塔结构：分多个层次
+- -- 高度集成化的人机信息系统（在TPS基础上引进大量管理方法对企业整体信息进行处理）
+- -- 金字塔结构：分多个层次（战略计划层、管理控制层、运行控制层）
 - -- 批处理系统（属于开环系统，就是在决定过程中，不断收集信息，不断发送给决策者）
 - -- 计算机实时处理系统（属于闭环系统）
 
@@ -35,7 +35,7 @@
 
 4. 专家系统（ES）
 - -- ES与Dss的重要区别（ES会进行判断与决策）
-- -- 包括：知识库、综合数据库、推理机、知识获取、解释程序（面向用户服务的）
+- -- 包括：知识库、综合数据库、推理机、知识获取、解释程序（面向用户服务的）、人机接口
 - -- 知识 + 推理 = 专家系统，人工智能是一个重要分支
 
 5. 办公自动化系统（OAS）
